feat: 系统设计小知识

--- a/system-design/监控设计.md
+++ b/system-design/监控设计.md
@@ -1,7 +1,11 @@
 # 监控设计
 
-## 监控基本设计
+## 监控的意义
+在软件设计中，开发和发布软件后，监控就是软件的基石，避免的应用在生产环境的裸奔。同时在实际发生线上问题时候，
+我们监控是我们唯一可以不通过用户获取的信息，能够快速还原错误现场。 
+除此之外，做好了监控，我们还可以再大规模用户无感的情况，快速发现业务异常，避免问题进一步的扩散。
 
+## 监控基本设计
 ### 前端异常类型
 
 - 图片加载异常
@@ -22,7 +26,9 @@ window.addEventListener("error", function () {}, true);
 window.addEventListener("unhandledrejection", function () {});
 ```
 
-onerror/addEventListener('error'): 两种错误监听信息中都包含的错误的信息、文件、行号、列号。相对来说更推荐使用 `addEventListener`。onerror 因为历史原因兼容 ie6-8 所以一直存在. ErrorEvent 如下: ![](./monitor/ErrorEvent.png)
+onerror/addEventListener('error'): 两种错误监听信息中都包含的错误的信息、文件、行号、列号。
+相对来说更推荐使用 `addEventListener`。onerror 因为历史原因兼容 ie6-8 所以一直存在. 
+ErrorEvent 如下: ![](./monitor/ErrorEvent.png)
 
 ### 具体的捕获类型错误处理
 
@@ -53,3 +59,39 @@ Promise的错误监听
 ```js
 window.addEventListener('unhandledrejection', function() {})
 ```
+
+## 信息上报
+
+通过发送一个1x1的gif图片作为异常信息上报。
+* 没有跨域问题
+* 完整的http请求，发出请求后，客户端不再处理
+* 跨域友好
+* 执行过程无阻塞
+* 相比构建XMLHttpRequest 性能更好
+* 相比使用其他图片格式1x1的gif图片格式最小
+
+## 业务监控实践
+
+监控主要目的是为了发现问题，首先在没有监控的情况，
+实际业务在线上运行的时候回出现业务发现问题率很低，就是说很多很问题都是用户反馈才能感知到，无法快速反馈到开发。
+
+实际我们在开发中，由于业务信息比较庞杂，导致有效业务监控的覆盖率不够。
+根据在日常业务划分有如下分类：
+* 通用异常：JSAPI异常、JS运行异常、请求异常、配置异常、组件渲染异常、脏数据等
+* 业务异常: 用户登录接口失败、核心操作点错误异常、核心流程中断异常
+* 业务正常指标: 用户提交行动点、核心页面渲染成功率等
+
+异常上报分为两种：监控系统自带的捕获异常，业务主动上传的信息
+
+监控系统捕获的异常：window.addEventListener('error') 方式可以得到大部分错误
+
+业务主动上报的信息：分为上面三种，主动上报的信息中，通用异常有部分和监控系统主动捕获的冲突，部分是需要我们自建的。前两个类是我们业务正常指标，
+后一类是反向指标，在一些业务场景情况下，通过正常值无法正确得到当前系统是否异常的指标就需要反向指标来说明当前系统是否有问题，反向指标的设定需要和
+系统日常的数据指标做对比，如果有大的起伏波动那么就说明了系统的问题。
+
+错误码规范：根据HTTP的错误规则，我们在实际业务中也定义了1xx/2xx/3xx的错误码，不同的错误码
+错误上报工具：根据不同的错误，会有一个错误集合，依赖于基础业务的数据，做好错误分类。根据上面分类的错误类型，错误码，提供整套错误上报工具，快速上报错误
+
+最后达成的目标：凡是非预期的错误都应该监控、凡是阻塞的行为都应该监控、凡是核心链路都需要监控。
+
+更进一步：在一个场景落地了该监控方案，还可以可以提供跨平台解决方案。
