--- a/system-design/降级设计.md
+++ b/system-design/降级设计.md
@@ -1,2 +1,33 @@
 ## 动画降级
 > https://www.cnblogs.com/karthuslorin/p/15931528.html
+
+降级在一个大型应用中是一定要存在的，降级就是一种功能预案，在合适的时间对机型做更好的事情
+
+降级的类型分为两种：业务降级、功能降级
+
+业务功能降级：带有争议的话题、某阶段敏感的活动。例如政策相关，时事敏感的。需要随时变更的功能
+功能降级：主要依赖机型相关，例如：内存不足、特性不支持、机型版本过低等，动画功能降级、native-app版本能力降级
+
+业务降级需要根据业务情况来梳理降级。
+
+功能降级：
+
+1. 机型划分。例如以iPhone6一下为低端机，iPhone8位中端机，iPhone高版本的为高端机。通过对机型打分，来划分不同级别机型
+2. 降级规则。通过统一降级平台下发降级配置，每个业务方独享单独的降级设定
+3. 降级策略。这个和业务规则是息息相关的，具体体现在使用到该功能或者动效的地方，需要去降级校验。从降级平台拿到当前业务支持的一个降级规则。
+4. 兜底处理。在降低到最下等级后，如果还有不支持的情况，这个时候就需要做兜底。功能和动效兜底。
+5. 降级数据收集。在不同的机型降级后，要拿到该用户是否降级和机型状态。同时数据也会反馈降级策略是否完善，可以逐步放开大量机型。
+
+功能降级好处：
+1. 对所有用户都有一个相对一直的体验
+2. 动效降级上就不用每次获取所有动效资源，节省CDN带宽
+3. 降级策略，防止功能不可用，页面雪花白屏等。
+
+劣势：
+1. 开发周期延长
+2. 需要更多人为整个降级系统做研发。前端开发多套策略、设计师兜底策略、测试压力
+
+动画分类：视频动画 -> lottie动画 -> css3 -> gif
+
+最后，从降级本质上来说都是因为应用运行环境的问题，运行环境不支持导致需要有降级的存在。作为研发工程师不是只需要保持流畅的动效和功能，还需要再不支持这些的情况下
+让用户依旧好用，这才是最重要的。保持二者平衡，才能全部用户的最佳体验。
