--- a/system-design/降级设计.md
+++ b/system-design/降级设计.md
@@ -1,22 +1,32 @@
 ## 动画降级
 > https://www.cnblogs.com/karthuslorin/p/15931528.html
 
-降级在一个大型应用中是一定要存在的，降级就是一种功能预案，在合适的时间对机型做更好的事情
+降级在一个大型应用中是一定要存在的，降级就是一种功能预案，在合适的时间对合适的机型做更好的功能
 
 降级的类型分为两种：业务降级、功能降级
 
 业务功能降级：带有争议的话题、某阶段敏感的活动。例如政策相关，时事敏感的。需要随时变更的功能
-功能降级：主要依赖机型相关，例如：内存不足、特性不支持、机型版本过低等，动画功能降级、native-app版本能力降级
+功能降级：主要依赖应用环境，例如：内存、CPU、GPU、设备等级等，动画功能降级、native-app功能版本能力降级
 
 业务降级需要根据业务情况来梳理降级。
 
-功能降级：
+### 功能降级
 
-1. 机型划分。例如以iPhone6一下为低端机，iPhone8位中端机，iPhone高版本的为高端机。通过对机型打分，来划分不同级别机型
-2. 降级规则。通过统一降级平台下发降级配置，每个业务方独享单独的降级设定
-3. 降级策略。这个和业务规则是息息相关的，具体体现在使用到该功能或者动效的地方，需要去降级校验。从降级平台拿到当前业务支持的一个降级规则。
-4. 兜底处理。在降低到最下等级后，如果还有不支持的情况，这个时候就需要做兜底。功能和动效兜底。
-5. 降级数据收集。在不同的机型降级后，要拿到该用户是否降级和机型状态。同时数据也会反馈降级策略是否完善，可以逐步放开大量机型。
+降级场景分类：
+* 通用：通过机型黑白名单、系统、rom等特征来评估。适合一般小场景情况
+* 内存: 动态判断vmsize闪退水位。高内存场景
+* 闪退：兜底新业务、新技术上线等
+* API：基础库的精准降级
+* GPU: 大量计算动画场景
+* 设备等级：分档
+* CPU：Android端有cpu 的位数区别，降级闪退粉线
+
+
+降级过程处理：
+1. 降级规则。通过统一降级平台下发降级配置，每个业务方独享单独的降级设定
+2. 降级策略。这个和业务规则是息息相关的，具体体现在使用到该功能或者动效的地方，需要去降级校验。从降级平台拿到当前业务支持的一个降级规则。
+3. 兜底处理。在降低到最下等级后，如果还有不支持的情况，这个时候就需要做兜底。功能和动效兜底。
+4. 降级数据收集。在不同的机型降级后，要拿到该用户是否降级和机型状态。同时数据也会反馈降级策略是否完善，可以逐步放开大量机型。
 
 功能降级好处：
 1. 对所有用户都有一个相对一直的体验
