--- a/micro-front/方案比较.md
+++ b/micro-front/方案比较.md
@@ -2,6 +2,30 @@
 
 ## iframe
 
-优势
-* 居然天然隔离的优势，可以完美的隔离css和html
-* 独立研发，独立维护
+优势：
+
+- 居然天然隔离的优势，可以完美的隔离 css 和 html
+- 独立研发，独立维护
+
+劣势：
+
+- 体验问题，刷新会导致 iframe url 丢失
+- 交互限制，弹框不能突破 iframe 的边界
+- 在复杂应用的情况，实现登录会变得更为复杂
+- 子应用每次加载，都需要重新经历网页上下文重建、资源重新加载的问题，性能问题，消耗资源
+- seo 的影响，多级嵌套，导致搜索引擎无法获取
+
+## Single-SPA/Qiakun
+
+优势：
+
+- 基于 Single-SPA 封装
+- HTML-Entry 接入方式
+- 技术栈无关
+- 样式隔离
+- 沙箱隔离
+- 生态插件
+
+劣势：
+
+- 隔离方案并不是太完美
